--- a/index.html
+++ b/index.html
@@ -385,7 +385,10 @@ ehmen
 				id: 'af633e59f609bc70', // Obtained from socket.io server
 				url: 'https://reveal-js-multiplex-ccjbegmaii.now.sh' // Location of socket.io server
 			},
-			dependencies: [{
+			dependencies: [
+				{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
+				{ src: 'plugin/multiplex/client.js', async: true },
+				{
 					src: 'plugin/markdown/marked.js'
 				},
 				{
@@ -395,8 +398,6 @@ ehmen
 					src: 'plugin/notes/notes.js',
 					async: true
 				},
-				{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
-				{ src: 'plugin/multiplex/client.js', async: true },
 				{
 					src: 'plugin/highlight/highlight.js',
 					async: true,
