Deactivates keyboard for client

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@ ehmen
 		Reveal.initialize({
 			controls: false,
 			history: true,
+			keyboard: false,
 			multiplex: {
 			// Example values. To generate your own, see the socket.io server instructions.
 				secret: null, // Obtained from the socket.io server. Gives this (the master) control of the presentation
