Added reference for live lecture

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 				#### Winterophase 17/18
 				Heiko Carrasco
 
+				--
+
+				### Vortrag live
+				![qrcode](img/qrcode.png)
+
+				https://tinyurl.com/linux-vortrag
+
 				---
 
 				### About me
@@ -363,6 +370,11 @@ ehmen
 
 				<!-- .slide: data-background-video="img/question.mp4" -->
 				# Fragen
+
+				--
+
+				# Folien
+				https://github.com/miterion/linux-vortrag
 
 				</script>
 			</section>
