--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				---
 
 				### About me
-				+ Linux Nutzer seid ~2009
+				+ Linux Nutzer seit ~2009
 				+ Komplett umgestiegen ~2012
 
 				---
