Update for this workshop

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 		<div class="slides">
 			<section data-markdown data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
 				<script type="text/template">
-				# Linux-Workshop
+				# Linux-Vortrag
 				#### Winterophase 18/19
 				Heiko Carrasco
 
 				--
 
-				### Vortrag live
+				### Vortragsfolien
 				![qrcode](img/qrcode.png)
 
 				https://tinyurl.com/linux-vortrag
